# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1059 2009/11/06 08:00:17 tt Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/11/06) Fixed bug#2948 - renamed crypt option "md5" to "md5-crypt" to
   avoid missunderstanding
 - (2009/11/03) Renamed some files in the bin/ directory
    CheckSum.pl                     ->  otrs.CheckSum.pl
    CleanUp.pl                      ->  otrs.CleanUp.pl
    Cron4Win32.pl                   ->  otrs.Cron4Win32.pl
    CryptPassword.pl                ->  otrs.CryptPassword.pl
    DeleteSessionIDs.pl             ->  otrs.DeleteSessionIDs.pl
    GenericAgent.pl                 ->  otrs.GenericAgent.pl
    mkStats.pl                      ->  otrs.mkStats.pl
    otrs.addGroup                   ->  otrs.addGroup.pl
    otrs.addQueue                   ->  otrs.addQueue.pl
    otrs.addRole                    ->  otrs.addRole.pl
    otrs.addRole2Group              ->  otrs.addRole2Group.pl
    otrs.addUser                    ->  otrs.addUser.pl
    otrs.addUser2Group              ->  otrs.addUser2Group.pl
    otrs.addUser2Role               ->  otrs.addUser2Role.pl
    otrs.checkModules               ->  otrs.checkModules.pl
    otrs.CreateNewTranslationFile   ->  otrs.CreateNewTranslationFile.pl
    otrs.getConfig                  ->  otrs.getConfig.pl
    otrs.getTicketThread            ->  otrs.getTicketThread.pl
    otrs.setPassword                ->  otrs.setPassword.pl
    PendingJobs.pl                  ->  otrs.PendingJobs.pl
    PostMaster.pl                   ->  otrs.PostMaster.pl
    PostMasterClient.pl             ->  otrs.PostMasterClient.pl
    PostMasterDaemon.pl             ->  otrs.PostMasterDaemon.pl